manifests/base/microservices/catalogue-db/catalogue-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    name: catalogue-db
  namespace: sock-shop
spec:
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    name: catalogue-db
